# noname

./: README.md  docker-compose.yml
client/: .dockerignore  .gitignore  Dockerfile  abdmApiEndpoints.ts  appMenuItemsPlan.txt  bezs.json  compose.yml  env.example  eslint.config.mjs  global.d.ts  middleware.ts  next.config.ts  package-lock.json  package.json  previsit-appointment-intake-prompt.txt  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json
client/seed-script/: data.js  doctor-seed.js  patient-seed.js  s.js  seed.js
client/src/: instrumentation-client.ts  instrumentation.ts
fhir-mcp/: Dockerfile  docker-compose.yml  justfile  pyproject.toml
fhir-mcp/app/: main.py  sample.py
fhir-server/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  create_encounter.json  create_patient.json  create_practitioner.json  docker-compose.yml  justfile  openapi_check.json  pyproject copy.toml  pyproject.toml  verify_setup.py
fhir-server/.claude/: settings.local.json
iam-server/: .env.example  .gitignore  Dockerfile  docker-compose.yml  justfile  pyproject.toml
iam-server/app/: main.py
iam-server/app/core/: config.py  keycloak.py  redis.py  session.py
iam-server/app/errors/: auth.py
iam-server/app/routers/: __init__.py  auth.py
iam-server/app/schemas/: practitioner.py
python-livekit-speech-to-text--agent/: .env.example  docker-compose.yml  main.py  requirements.txt
server/: .dockerignore  .env.example  create_encounter.json  create_encounter_minimal.json  docker-compose.yml  justfile  pyproject.toml  requirements.txt
(+1150 files in other folders)
